# lift_trax

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  JAVA_PROJECT.md  README.md  build.gradle  gradlew.bat  settings.gradle
.github/workflows/: hosted-deploy.yml
config/: lifttrax-hosted.example.properties  lifttrax-local.override.example.properties  lifttrax-local.properties  lifttrax-render.properties
config/pmd/: ruleset.xml
docs/: account-authentication.md  ai-workout-schema-guide.md  hosted-deployment-pipeline.md  hosted-persistence-adapter.md  hosted-user-data-schema.md  postgres-runtime-and-sqlite-snapshots.md  program-schema-v1.md  public-web-security-baseline.md  pwa-offline-boundaries.md  schema-versioning.md  user-ownership-model.md  user-scoped-authorization.md  workout-file-format-v1.md  workout-plan-model.md
docs/adr/: 0001-local-first-java-sqlite.md  0002-hosted-web-pwa-managed-platform.md  0003-hosted-auth-data-platform.md  0004-postgres-only-runtime.md  README.md  TEMPLATE.md
java/: README.md  build.gradle  gradlew  gradlew.bat
rust/: ARCHIVED.md  Cargo.toml  README.md
rust/src/: database.rs  lib.rs  list.rs  main.rs  random_stack.rs  sqlite_db.rs  wave_view.rs  weight.rs
rust/tests/: accessory_stacks.rs  conjugate_wave_parity.rs  dynamic_lifts.rs  list.rs  max_effort_lift_pools.rs  (+7 more)
scripts/: hosted-smoke.ps1
src/: database.rs  gui.rs  main.rs  models.rs  sqlite_db.rs  weight.rs  workout.rs
tasks/: README.md  roadmap.md  schema.md
testdata/: conjugate_wave_parity.md
tests/: models.rs  sqlite_db.rs  weight.rs  workout_builder.rs
(+424 files in other folders)
