[package]
name = "lift_trax_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4" }
eframe = { version = "0.24", default-features = false, features = ["glow", "default_fonts"] }
winapi = { version = "0.3", features = ["winuser"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
